[package]
name = "sslenum"
version = "2.0.0"
authors = ["melbadry9"]
edition = "2021"
description = "SSL certificate Extractor"
documentation = "https://github.com/melbadry9/sslenum"
repository = "https://github.com/melbadry9/sslenum"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "io-std",
    "io-util",
    "time"
] }
openssl = "0.10"
openssl-probe = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "2" }
hex = "0.4"
url = "2"
futures = "0.3"

[profile.release]
opt-level = "z"       # optimize for size ("s" or "z")
lto = true            # Link Time Optimization
codegen-units = 1     # better LTO results (slower builds)
debug = false         # no debug info in the binary
panic = "abort"       # smaller panic runtime (no unwinding)
